@@ -1,3 +1,8 @@
+2008-10-28  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/menu-def.lisp: Add children navigation menu in the movement
+	menu (select next/previous child/brother/level).
+
 2008-10-26  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	*  *: Rename 'sister' frame to 'brother' frame.
